[project]
name = "pyghtcast"
version = "0.1.0"
description = "A library to interact with Lightcast API"
authors = [
    { name = "Ammar N", email = "ananjiani@dallascollege.edu" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "click>=8.1.0",
]

[project.scripts]
pyghtcast = "pyghtcast.cli:cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "types-click>=7.1.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"  # Using py312 until ruff is updated

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=pyghtcast --cov-report=term-missing"

[tool.coverage.run]
source = ["pyghtcast"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
